[package]
name = "actix-web-prometheus"
description = "Actix web middleware for prometheus metrics"
version = "0.1.2-beta.8"
edition = "2018"
repository = "https://github.com/atomix-team/actix-web-prometheus"
authors = [
    "Kirill Mironov <vetrokm@gmail.com>"
]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.9", default-features = false }
actix-service = { version = "2.0.0", default-features = false }
prometheus = { version = "0.13.0", default-features = false }
thiserror = "1.0.29"
pin-project = "1.0.8"
quanta = "0.9.3"
futures-lite = "1.12.0"

[dev-dependencies]
tokio = "1.12.0"

[features]
process = ["prometheus/process"]
