[package]
name = "actix-web-prometheus"
description = "Actix web middleware for prometheus metrics"
version = "0.1.2-beta.10"
edition = "2018"
repository = "https://github.com/atomix-team/actix-web-prometheus"
authors = [
    "Kirill Mironov <vetrokm@gmail.com>"
]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.2.1", default-features = false }
actix-service = { version = "2.0.2", default-features = false }
prometheus = { version = "0.13.2", default-features = false }
thiserror = "1.0.37"
pin-project = "1.0.12"
quanta = "0.10.1"
futures-lite = "1.12.0"

[dev-dependencies]
tokio = "1.21.2"

[features]
process = ["prometheus/process"]
